--- a/.github/workflows/django_ci_cd.yml
+++ b/.github/workflows/django_ci_cd.yml
@@ -11,7 +11,7 @@ jobs:
       max-parallel: 4
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.10, 3.11, 3.12, 3.13.1]
+        python-version: [3.10, 3.11]
 
     steps:
       - uses: actions/checkout@v4
