--- a/.github/workflows/django_ci_cd.yml
+++ b/.github/workflows/django_ci_cd.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
         python-version: [3.11, 3.12, 3.13.1]
 
     steps:
