--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,19 @@ asgiref==3.8.1
 black==24.10.0
 click==8.1.8
 Django==5.1.4
+django-extensions==3.2.3
+django-phonenumber-field==8.0.0
 flake8==7.1.1
 isort==5.13.2
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==24.2
 pathspec==0.12.1
+phonenumbers==8.13.52
+pillow==11.0.0
 platformdirs==4.3.6
 pycodestyle==2.12.1
+pydot==3.0.3
 pyflakes==3.2.0
+pyparsing==3.2.0
 sqlparse==0.5.3
