--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.8
 Django==5.1.4
 django-extensions==3.2.3
 django-phonenumber-field==8.0.0
+djangorestframework==3.15.2
 flake8==7.1.1
 isort==5.13.2
 mccabe==0.7.0
