--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,43 @@
 asgiref==3.8.1
 black==24.10.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.0
+defusedxml==0.8.0rc2
 Django==5.1.4
 django-extensions==3.2.3
 django-phonenumber-field==8.0.0
 djangorestframework==3.15.2
+djangorestframework_simplejwt==5.4.0
+djoser==2.3.1
+drf-yasg==1.21.8
 flake8==7.1.1
+idna==3.10
+inflection==0.5.1
 isort==5.13.2
 mccabe==0.7.0
 mypy-extensions==1.0.0
+oauthlib==3.2.2
 packaging==24.2
 pathspec==0.12.1
 phonenumbers==8.13.52
 pillow==11.0.0
 platformdirs==4.3.6
 pycodestyle==2.12.1
+pycparser==2.22
 pydot==3.0.3
 pyflakes==3.2.0
+PyJWT==2.10.1
 pyparsing==3.2.0
+python3-openid==3.2.0
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
 sqlparse==0.5.3
+uritemplate==4.1.1
+urllib3==2.3.0
