Added postgres as main db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,5 +25,19 @@ services:
     env_file:
       - .env
 
+  pgadmin:
+      container_name: pgadmin_container
+      image: dpage/pgadmin4
+      restart: on-failure
+      env_file:
+        - .env
+      ports:
+        - 5055:80
+      volumes:
+        - pgadmin_data:/var/lib/pgadmin
+      depends_on:
+        - postgres
+
 volumes:
     pg_data: { }
+    pgadmin_data: { }
