--- a/.github/workflows/django_ci_cd.yml
+++ b/.github/workflows/django_ci_cd.yml
@@ -16,6 +16,21 @@ jobs:
         os: [ubuntu-latest]
         python-version: [3.11, 3.12, 3.13.1]
 
+    services:
+      postgres:
+        image: postgres:13
+        ports:
+          - 5432:5432
+        env:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: postgres
+            POSTGRES_DB: github_actions
+        options:
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
