--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,34 @@ services:
       depends_on:
         - postgres
 
+  mongodb:
+    image: mongo:3-stretch
+    platform: linux/amd64
+    container_name: mongo_db_container
+    ports:
+      - 27017:27017
+    command: [ "--bind_ip_all", "--smallfiles" ]
+    volumes:
+      - mongo_data:/data/db
+    env_file:
+      - .env
+    restart: on-failure
+
+  mongoadmin:
+    image: mongo-express
+    platform: linux/amd64
+    container_name: mongo_admin_container
+    ports:
+      - 8091:8081
+    env_file:
+      - .env
+    restart: on-failure
+    links:
+      - mongodb
+    depends_on:
+      - mongodb
+
 volumes:
+    mongo_data: { }
     pg_data: { }
     pgadmin_data: { }
