--- a/requirements.txt
+++ b/requirements.txt
@@ -12,33 +12,44 @@ django-phonenumber-field==8.0.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 djoser==2.3.1
+dnspython==2.7.0
 drf-yasg==1.21.8
+Faker==33.3.1
 flake8==7.1.1
 idna==3.10
 inflection==0.5.1
 isort==5.13.2
 mccabe==0.7.0
+mongoengine==0.29.1
 mypy-extensions==1.0.0
+numpy==2.2.1
 oauthlib==3.2.2
 packaging==24.2
+pandas==2.2.3
 pathspec==0.12.1
 phonenumbers==8.13.52
 pillow==11.0.0
 platformdirs==4.3.6
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pycodestyle==2.12.1
 pycparser==2.22
 pydot==3.0.3
 pyflakes==3.2.0
 PyJWT==2.10.1
+pymongo==4.10.1
 pyparsing==3.2.0
+python-dateutil==2.9.0.post0
 python3-openid==3.2.0
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
+six==1.17.0
 social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.3
+typing_extensions==4.12.2
+tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.3.0
-psycopg2-binary
