--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,14 @@ services:
     build: ./
     container_name: quiz_container
     working_dir: /quizez
-    command: ["./commands/start_server.sh"]
+    command: ["./commands/start_server_${MODE}.sh"]
     ports:
       - 8010:8000
     volumes:
       - ./src:/quizez/src
       - ./commands:/quizez/commands
+      - static_content:/quizez/static
+      - media_content:/quizez/media
     env_file:
       - .env
     depends_on:
@@ -65,7 +67,23 @@ services:
     depends_on:
       - mongodb
 
+  nginx:
+    image: nginx:1.19
+    volumes:
+      - static_content:/quiz/src/static
+      - media_content:/quiz/src/media
+      - ./nginx:/etc/nginx/conf.d
+    ports:
+      - 80:80
+      - 443:443
+    env_file:
+      - .env
+    depends_on:
+      - backend
+
 volumes:
+    static_content: { }
+    media_content: { }
     mongo_data: { }
     pg_data: { }
     pgadmin_data: { }
